Refatoração substituindo herança por delegação. Adicionando métodos para que cada objeto consiga criar uma instância com valores default.